# github_repo_management

./: .env.example  .gitignore  README.md  pyproject.toml  report.md  test_single_agent.py
src/github_repo_management/: crew.py  main.py
src/github_repo_management/config/: agents.yaml  tasks.yaml
src/github_repo_management/tools/: __init__.py  git_tools.py  github_tools.py  prd_parser.py  project_templates.py  scaffolding_tools.py
